# OpenAIHackathon-ConceptMRI

./: .dockerignore  .env.example  .gitignore  =0.45.0  ANALYSIS.md  CLAUDE.md  CLUSTERING_IMPLEMENTATION_CONTEXT.txt  CURRENT_STATUS.md  Dockerfile  LICENSE  LLM_INSIGHTS_CONTEXT.txt  Makefile  PROBES.md  README.md  architecture.yaml  attractor_architecture.md  attractorpaper.md  concept_mri_implementation_v1_3.md  docker-compose.yml  firstexperiment.md  massive_probe_request.json  package-lock.json  pyproject.toml  snap_full.md
.claude/: settings.json
LLMud/: AI_SYSTEM_DESIGN.md  INSTITUTION_DESIGN.md  VISION.md  WORLD_DESIGN.md  examplescenario.md
backend/: README.md  requirements.txt
docs/: ANALYSIS.md  ARCHITECTURE_REVIEW.md  MULTI_MODEL_DESIGN.md  PIPELINE.md  PROBES.md  RECOMMENDATIONS.md  SCAFFOLDING_IDEAS.md  SERVERS.md  SOFTWARE_OVERVIEW.md  TEMPORAL_AND_OUTPUT_REQUIREMENTS.md  architecturemud.md  architecturescenarios.md  steeringandscenarios.md
frontend/: README.md  package-lock.json  package.json  vite.config.ts
paper/: application_essays.md  essays_clean.txt  main.tex  papertextroughdraft.md
papers/: .gitignore  GUIDE.md
research/: claude_code_best_practices.md
scripts/: balanced_pos_selection.json  build_and_run_pos_probe_all_layers.py  check_system.py  comprehensive_pos_words.json  comprehensive_probe_request.json  create_comprehensive_probe.py  create_curated_pos_probe.py  create_massive_comprehensive_probe.py  create_noun_complexity_probe.py  create_pos_probe.py  create_simple_pos_probe.py  create_validated_noun_complexity_probe.py  (+36 more)
(+931 files in other folders)
